More on the family matters of `宋仁宗`.

--- a/30-song-01-emperor.Rmd
+++ b/30-song-01-emperor.Rmd
@@ -35,14 +35,22 @@
 
 15. []{#-宋人轶事-15} 燕恭肃王轻施厚费，不计有无，常预借料钱，多至数岁，仁宗常诏有司复给，如是数矣。御史沈邈以谓‘不可以国之常入而奉无厌之求，愿使谕意’，上曰：‘御史误矣！太宗之子八人，今惟王尔。先帝之弟，朕之叔父也，每恨不能尽天下以为养，数岁之禄，不足计也。’《后山谈丛》卷四。《邵氏闻见后录》卷一。
 
+[^司谏]: 官名。《周礼》地官之属。主管督察吏民过失，选拔人才。唐门下省的谏官，有补阙﹑拾遗。宋太宗端拱初改补阙为左右司谏，掌讽谕规谏。元以后废。参阅《文献通考．职官四》。
 
-16. []{#宋仁宗-宋人轶事-16} 仁宗初选郭氏为皇后，甚有姿色，然刚妬无子，又尝与向美人争殴，帝以为不可母天下，废为庶人。右司谏范仲淹谏曰：‘后者所以长阴教而母万国，不宜以过失轻废之，且人孰无过，陛下当谕后失，置之别馆，择嫔妃老者劝导之，俟其悔而复宫。’书奏不纳，明日又率其属伏閤论列，帝遣中人押送中书商量。宰相以汉唐有废后故事，仲淹曰：‘上天姿尧舜，相公奈何以前世弊法累盛德？’御史中丞孔道辅又极论其不可。明日留班与宰相廷辨是非，仲淹等得罪，后遂废居瑶华宫。《遵尧录》卷四。
+[^伏合]: 据《新五代史．李琪传》载，唐朝大明宫中的紫宸殿称合，是天子于朔望日接见群臣的便殿(一说为前殿，见宋王溥《唐会要．大明宫》)。后因以"伏合"指朝臣俯伏合下向天子奏事。
+
+16. []{#宋仁宗-宋人轶事-16} 仁宗初选郭氏为皇后，甚有姿色，然刚妬 `r n("dù。同“妒”")` 无子，又尝与向美人争殴，帝以为不可母天下，废为庶人。
+右司谏[^司谏]范仲淹谏曰：‘后者所以长阴教 `r n("阴教。女子的教化")` 而母万国，不宜以过失轻废之，且人孰无过，陛下当谕后失，置之别馆，择嫔妃老者劝导之，俟 `r n("sì。等待")` 其悔而复宫。’书奏不纳，明日又率其属伏合[^伏合]论列 `r n("指言官上书检举弹劾")` ，帝遣中人押送中书商量。
+宰相以汉唐有废后故事，仲淹曰：‘上天姿尧舜，相公奈何以前世弊法累盛德？’御史中丞 *孔道辅* 又极论其不可。明日留班与宰相廷辨是非，仲淹等得罪，后遂废居瑶华宫。《遵尧录》卷四。
 
 17. []{#-宋人轶事-17} 见郭后4。
 
-18. []{#-宋人轶事-18} 郭后既废，京师富民号陈子城者，因保庆杨太后纳女入宫，太后许以为后也。已至掖庭，将进御，勾当御药院阎士良闻之，遽见上。上方披《百叶图》择日，士良曰：‘陛下读此何为？’上曰：‘汝何问焉？’士良曰：‘臣闻陛下欲纳陈氏女为后，信否？’上曰：‘然。’士良曰：‘陛下知子城使何官？’上曰：‘不知也。’士良曰：‘子城使，大臣家奴仆之官也。陛下若纳奴仆之女为后，岂不愧见公卿大夫邪？’上遽命出之。《涑水记闻》卷十。
+18. []{#-宋人轶事-18} 郭后既废，京师富民号 *陈子城* `r n("子城乃官名")`  者，因保庆杨太后纳女入宫，太后许以为后也。已至掖庭，将进御，勾当御药院 *阎士良* `r n("下条中阎文应之子。见[这里](https://zh.wikipedia.org/wiki/%E9%96%BB%E5%A3%AB%E8%89%AF)")` 闻之，遽见上。上方披 `r n("翻开;翻阅")` 《百叶图》择日，士良曰：‘陛下读此何为？’上曰：‘汝何问焉？’士良曰：‘臣闻陛下欲纳陈氏女为后，信否？’上曰：‘然。’士良曰：‘陛下知子城使何官？’上曰：‘不知也。’士良曰：‘子城使，大臣家奴仆之官也。陛下若纳奴仆之女为后，岂不愧见公卿大夫邪？’上遽命出之。《涑水记闻》卷十。
 
-19. []{#宋仁宗-宋人轶事-19} 尚、杨二美人方有宠，每夕并侍上寝，上体为之弊，或累日不进食。中外忧惧，皆归罪二美人。保庆杨太后亟以为言，上未能去。入内内寺省都知阎文应日夕侍上，言之不已，上不胜烦，乃许。文应即召毡车载之出，二美人涕泣，辞说云云，不肯行，文应搏其颊，骂曰：‘宫婢尚复何云！’即载送别宫。明日，下诏以尚氏为女冠，杨氏为尼，立曹后。《涑水记闻》卷三。
+19. []{#宋仁宗-宋人轶事-19} 尚、杨二美人方有宠，每夕并侍上寝，上体为之弊，或累日不进食。 `r co("典型纵欲过度")` 
+中外忧惧，皆归罪二美人。*保庆杨太后* 亟 `r n("屡次；急切")` 以为言，上未能去。入内内寺省都知 *阎文应* 日夕侍上，言之不已，上不胜烦，乃许。
+文应即召毡车 `r n("以毛毡为篷的车子")` 载之出，二美人涕泣，辞说云云，不肯行，文应搏 `r n("通“拍”。轻击;击 [beat]")` 其颊，骂曰：‘宫婢尚复何云！’即载送别宫。
+明日，下诏以尚氏为女冠 `r n("女冠。在道教门中修道的女道士")` ，杨氏为尼，立曹后。《涑水记闻》卷三。
 
 20. []{#-宋人轶事-20} 见滕宗谅1。
 
