--- a/30-song-02-official.Rmd
+++ b/30-song-02-official.Rmd
@@ -29,11 +29,19 @@
 
 12. []{#-宋人轶事-12} 真宗崩，丁晋公为山陵大礼使，宦者雷允恭为山陵都监。及开皇堂，泉脉坌涌，丁私欲庇覆，遂更不闻奏，擅移数十丈。当时以为移在绝地，于是朝论大諠。是时吕夷简权知开封府，推鞫此狱，丁既久失天下之心，而众咸目为不轨，以至‘取彼头颅，置之郊社’云云。狱既起，丁犹秉政，许公雅知丁多智数，凡行移、推劾文字，及追证左右之人，一切止罪允恭，略无及丁之语。狱具，欲上闻，丁信以为无疑，遂令许公奏对。公至上前方暴其绝地之事，谓竟以此投海外，许公遂参知政事矣。《东轩笔录》卷三。
 
-13. []{#吕夷简-宋人轶事-13} 真宗初上仙，庄献攀慕号切，凡丧祭之礼，务极崇厚。吕文靖公奏曰：‘太后为先帝丧纪之数，宗庙之仪，不忍裁减，曲尽尊奉，此虽至孝之道，以臣所见，尚未足报先帝恩遇之厚。唯是远奸邪，奖忠直，惜民财，拔擢时彦，使边徼宁靖，人物富安，皇帝德业日茂，太后寿乐无忧，此报先帝之大节也。’《渑水燕谈录》卷一。《宋朝事实类苑》卷十六。
+13. []{#吕夷简-宋人轶事-13} 真宗初上仙，庄献攀慕 `r n("谓对去世帝王的哀悼思慕")` 号 `r n("号，痛声")` 切，凡丧祭之礼，务极崇厚。
+吕文靖公奏曰：‘太后为先帝丧纪之数，宗庙之仪，不忍裁减，曲尽尊奉，此虽至孝之道，以臣所见，尚未足报先帝恩遇之厚。唯是远奸邪，奖忠直，惜民财，拔擢时彦，使边徼宁靖，人物富安，皇帝德业日茂，太后寿乐无忧，此报先帝之大节也。’《渑水燕谈录》卷一。《宋朝事实类苑》卷十六。
 
-14. []{#-宋人轶事-14} 章懿太后之葬也，明肃方听政，有旨令凿内城垣以出柩。是时吕文靖公夷简当国，遽求对，而明肃已揣知其意，止令入内都知罗崇勋问有何事。文靖具奏凿垣非礼，宜开西华门以出神柩。明肃使崇勋报曰：‘向夷简道，岂意卿亦如此也。’文靖答曰：‘臣备位宰相，朝廷大事当廷争，太后不允，臣终不退。’崇勋三返，而太后之意不回。文靖正色谓崇勋曰：‘宸妃诞育圣主，而送终之礼如此，异时治今日之事，莫道夷简不争。太尉日侍太后左右，不能开述讽导，当为罪魁矣。’崇勋大惧，驰告明肃，于是始允所请。《东轩笔录》卷四。
+14. []{#吕夷简-宋人轶事-14} 章懿太后之葬也，明肃方听政，有旨令凿内城垣以出柩。
+是时吕文靖公夷简当国，遽求对，而明肃已揣知其意，止令入内都知 `r n("入内内侍省都知，掌供奉禁中之事")` *罗崇勋* 问有何事。文靖具奏凿垣非礼，宜开西华门以出神柩。明肃使崇勋报曰：‘向夷简道，岂意卿亦如此也。’文靖答曰：‘臣备位 `r n("备位。居官的自谦之词。谓愧居其位不过聊以充数")` 宰相，朝廷大事当廷争，太后不允，臣终不退。’
+崇勋三返，而太后之意不回。文靖正色谓崇勋曰：‘宸妃诞育圣主，而送终之礼如此，异时治今日之事，莫道夷简不争。太尉日侍太后左右，不能开述 `r n("开述。进言；阐发解释")` 讽导 `r n("劝谏开导。讽，谏也")` ，当为罪魁矣。’崇勋大惧，驰告明肃，于是始允所请。《东轩笔录》卷四。
 
-15. []{#-宋人轶事-15} 吕文靖公为相，章献太后垂帘同听政。李宸妃薨，章献秘之，欲以宫人常礼治丧于外。文靖早朝，留身奏曰：‘闻禁中贵人暴薨，丧礼宜从厚。’章献遂挽仁宗入内。少顷，独坐帘下，召文靖问曰：‘一宫人死，相公云云何与？’公曰：‘臣待罪宰相，事内外无不当预。’章献怒曰：‘相公欲离间我母子耶？’公从容对曰：‘陛下不以刘氏为念，臣不敢言；尚念刘氏也，丧礼宜从厚。’章献悟，遽曰：‘宫人李宸妃也，且奈何？’文靖乃请治丧皇仪殿，太后与帝举哀后苑，百官奉灵舆由西华门以出，用一品礼殡洪福寺。公又谓入内都知罗崇勋曰：‘宸妃当以后服殓，用水银实棺，异时莫道夷简不曾说来。’章献皆从之。后章献上仙，燕王谓仁宗言：‘陛下李宸妃所生，妃死以非命。’仁宗号恸毁顿，不视朝者累日，下哀痛之诏自责，尊宸妃为皇太后，谥章懿。甫毕，章献殿殡，幸洪福寺祭告。易梓宫，帝亲哭视之，后玉色如生，冠服如皇太后者，以有水银沃之，故不坏也。帝叹息曰：‘人言其可信哉！’待刘氏加厚。使仁宗孝德、章献母道两全，文靖公先见之明也。呜呼智哉！《邵氏闻见录》卷八。《东都事略》卷五十二。《昨非庵日纂》二集卷一。
+15. []{#吕夷简-宋人轶事-15} 吕文靖公为相，章献太后垂帘同听政。李宸妃薨，章献秘 `r n("隐藏;保守秘密")` 之，欲以宫人常礼治丧于外。
+文靖早朝，留身 `r n("古时大臣早朝完毕，欲密奏事宜，而请求留下面圣，称为「留身」")` 奏曰：‘闻禁中贵人暴薨，丧礼宜从厚。’章献遂挽仁宗入内。
+少顷，独坐帘下，召文靖问曰：‘一宫人死，相公云云 `r n("云云。如此,这样")` 何与 `r n("何如、何干")` ？’公曰：‘臣待罪宰相，事内外无不当预。’章献怒曰：‘相公欲离间我母子耶？’公从容对曰：‘陛下不以刘氏为念，臣不敢言；尚念刘氏也，丧礼宜从厚。’章献悟，遽曰：‘宫人李宸妃也，且奈何？’文靖乃请治丧 *皇仪殿* ，太后与帝举哀后苑，百官奉灵舆由西华门以出，用一品礼殡洪福寺。
+公又谓入内都知罗崇勋曰：‘宸妃当以后服殓，用水银实棺，异时莫道夷简不曾说来。’章献皆从之。
+后章献上仙，燕王谓仁宗言：‘陛下李宸妃所生，妃死以非命。’ `r co("但[此处](#杨淑妃语仁宗)为小娘娘告知，未言非命")` 仁宗号恸毁顿 `r n("毁顿。因居丧过哀而致精神委顿")` ，不视朝者累日，下哀痛之诏自责，尊宸妃为皇太后，谥章懿。甫 `r n("方才，刚刚")` 毕，章献殿殡，幸洪福寺祭告。易梓宫 `r n("皇帝的棺木。以梓木做成")` ，帝亲哭视之，后玉色如生，冠服如皇太后者，以有水银沃之，故不坏也。帝叹息曰：‘人言其可信哉！’待刘氏加厚。
+使仁宗孝德、章献母道两全，文靖公先见之明也。呜呼智哉！《邵氏闻见录》卷八。《东都事略》卷五十二。《昨非庵日纂》二集卷一。
 
 16. []{#-宋人轶事-16} 见晏殊15。
 
@@ -51,13 +59,15 @@
 
 23. []{#-宋人轶事-23} 见包拯5。
 
-24. []{#-宋人轶事-24} 刘后上仙，仁宗欲以杨太妃为太后，以问申公。申公曰：‘典故无此事。’上曰：‘奈已许之矣。’吕曰：‘太后乐乎？’上曰：‘乐之。’吕即曰：‘唯唯。陛下宫中甚孤立，不便。’吕以此意密语公。时谏官、御史知其非而畏其说，竟不敢争也。公曰：‘吕公固多不正以结上，然皆有说以胜人，人亦不能夺也。’刘后服未除，而劝仁宗娶曹后，希文进曰：‘又教陛下做一不好事。’他日，吕语某云：‘此事外人不知，刘既上仙，官家春秋盛，郭后、尚美人皆以宠废，以色进者不可胜数，已几于昏矣。不立后，无以止之。’公曰：‘每事自有深意。’《韩魏公别录》。
+24. []{#吕夷简-宋人轶事-24} 刘后上仙，仁宗欲以杨太妃为太后 `r co("仁宗与杨淑妃甚亲厚，盖其[自小养之](#杨淑妃-宋人轶事-1)")` ，以问 *申公* 。申公曰：‘典故无此事。’上曰：‘奈已许之矣。’吕曰：‘太后乐乎？’上曰：‘乐之。’吕即曰：‘唯唯 `r n("恭敬的应答声")` 。陛下宫中甚孤立，不便。’
+吕以此意密语公。时谏官、御史知其非而畏其说 `r n("观点;言论")` ，竟不敢争也。公曰：‘吕公固多不正以结上，然皆有说以胜人，人亦不能夺也。’
+刘后服未除，而劝仁宗娶曹后，*希文* 进曰：‘又教陛下做一不好事。’他日，吕语某云：‘此事外人不知，刘既上仙，官家春秋 `r n("春秋。年龄")` 盛，郭后、尚美人皆以宠废，以色进者不可胜数，已几于昏矣。不立后，无以止之。’ `r co("[废两女立曹后](#宋仁宗-宋人轶事-19)")` 公曰：‘每事自有深意。’《韩魏公别录》。
 
 25. []{#-宋人轶事-25} 仁宗初莅政，问辅臣：‘四方奏狱来上，不知所以裁之，如之何则可？’吕文靖公夷简进曰：‘凡奏狱，必出于疑。疑则从轻可也。’帝深以为然，故终仁宗之世，疑狱一从于轻。《厚德录》卷四。
 
 26. []{#-宋人轶事-26} 范公作谏官，申公不悦王随，乃面讽希文云：‘随近日多引师巫出入。及某事某事，皆可击也。’希文云：‘某不知其详，未敢闻命。’吕知希文不纳，恐事泄，反以语随云：‘范司谏欲奏言某事，某已劝之，且止矣。’公曰：‘吕申公极有机智，虽忌正人，然亦未尝敢全疏弃之。’《韩魏公别录》。
 
-27. []{#-宋人轶事-27} 见郭后3。
+27. []{#-宋人轶事-27} 见[郭后3](#郭后-宋人轶事-3)。
 
 28. []{#-宋人轶事-28} 张邓公、吕许公同作宰相。一日朝退，仁宗独留吕公，问曰：‘张士逊久在政府，欲与一差遣出去。’吕公曰：‘士逊出入两朝，亦颇宣力。’仁宗曰：‘恩命如何？’吕公曰：‘与除静江军节度使、检校太傅，知许州。’仁宗曰：‘有亏他否？’吕公曰：‘圣恩优厚。’吕公既退，张、吕亲姻也，私焉曰：‘主上独留公，必是士逊别有差遣。’因祈以恩命。吕沉吟久之，曰：‘使弼，使弼。’张亦欣然慰望。是日，张公打屏閤子内物色过半矣，既夕锁院，明日早，张公令院子尽搬閤子内物色归家，更不趋待漏院，只就审官东院待漏。既入朝，张公惟祗候宣麻，吕公惟准拟押麻耳。忽有堂吏报吕公云：‘相公知许州。’吕公大惊。于是张公押麻，乃吕公除静江军节度使、检校太傅，知许州也。《孔氏谈苑》卷一。《宾退录》卷四。参见宋仁宗26。
 
@@ -240,7 +250,7 @@
 
 59. []{#-宋人轶事-59} 有士人求见韩魏公，说亲丧、二女未嫁，愿有以周之。公退，顾无所有，为之戚然。夫人收酒器，得一大合，送之。士人对使者曰：‘相公何薄我也？’叱之，不受。公曰：‘吾固疑甚薄也。’复裒一合，送至，士人又怒骂不受。使者曰：‘相公实无所有，非薄君也。’士人不顾，使者持回。公又裒一合以往，士人笑以书授使者曰：‘吾事已办，不愿受也。向来盖欲观公度量耳。’《瑞桂堂暇录》。
 
-60. []{#-宋人轶事-60} 韩琦在政府时，以三十万钱买女妇张氏，姿色美丽。券成，张忽澘然曰：‘妾本修职郎郭守义妻也，部使者挟私，劾以败官。今秋高岁晚，实恐尽室饿死京师，愿没身于人，以活守义儿女。’琦恻然悯之，遣张持钱还舍，令语：‘守义败官果非辜，可诉之朝，事白，汝却归我家。’郭后得辩雪，张来如约。琦不使至前曰：‘吾位宰相，岂可妾士人妻，向者钱费用应尽。’取前日券，包金二十星，曰：‘助汝之官，善视儿女。’张涕泗感激，百拜而去。《昨非庵日纂》二集卷三。
+60. []{#韩琦-宋人轶事-60} 韩琦在政府时，以三十万钱买女妇张氏，姿色美丽。券成，张忽澘然曰：‘妾本修职郎郭守义妻也，部使者挟私，劾以败官。今秋高岁晚，实恐尽室饿死京师，愿没身于人，以活守义儿女。’琦恻然悯之，遣张持钱还舍，令语：‘守义败官果非辜，可诉之朝，事白，汝却归我家。’郭后得辩雪 `r n("辩白昭雪")` ，张来如约。琦不使至前曰：‘吾位宰相，岂可妾士人妻，向者钱费用应尽。’取前日券，包金二十星，曰：‘助汝之官，善视儿女。’张涕泗感激，百拜而去。《昨非庵日纂》二集卷三。
 
 61. []{#-宋人轶事-61} 魏公夫人尝蓄婢，而魏公不知也。教以歌舞，至魏公生朝，乃出之，使上寿，公见其疏爽，悦之。其婢既上寿毕，忽泣下。公怪而问之，婢曰：‘念妾父在时，每生朝，婢子辈上寿，亦必歌此曲，今忽感其事，不知泪之所从也。’公曰：‘汝父为何人？’曰：‘某人，尝为某州通判。’公大惊，责夫人曰：‘此士大夫女，安得辄取为婢？’夫人谢不知。魏公即令与诸女列，后择一有官人，厚嫁之。《北窗炙輠录》卷上。
 
