--- a/30-song-03-female.Rmd
+++ b/30-song-03-female.Rmd
@@ -69,7 +69,7 @@
 
 ### 《宋人轶事汇编·卷一》
 
-1. []{#-宋人轶事-1} 上 `r n("仁宗")` 幼冲 `r n("年龄幼小")` 即位，章献性严，动 `r n("动不动，常常")` 以礼法禁约之，未尝假以颜色 `r n("在态度和言辞上表示友好")` ，章惠以恩抚之。上多苦风痰，章献禁虾蟹海物不得进御，章惠常藏弆 `r n("jǔ。收藏")` 以食之，曰：‘太后何苦虐吾儿如此。’上由是怨章献而亲章惠 `r co("刘氏用心良苦，杨氏不知，抑或明知故不知")` ，谓章献为大娘，章惠为小娘 `r co("为何不是大娘娘、小娘娘")` 。及章献崩，尊章惠为太后，所以奉事曲尽 `r n("曲尽，竭尽")` 恩意。景祐中，薨，神主祔于奉慈庙。《涑水记闻》卷八。
+1. []{#杨淑妃-宋人轶事-1} 上 `r n("仁宗")` 幼冲 `r n("年龄幼小")` 即位，章献性严，动 `r n("动不动，常常")` 以礼法禁约之，未尝假以颜色 `r n("在态度和言辞上表示友好")` ，章惠以恩抚之。上多苦风痰，章献禁虾蟹海物不得进御，章惠常藏弆 `r n("jǔ。收藏")` 以食之，曰：‘太后何苦虐吾儿如此。’上由是怨章献而亲章惠 `r co("刘氏用心良苦，杨氏不知，抑或明知故不知")` ，谓章献为大娘，章惠为小娘 `r co("为何不是大娘娘、小娘娘")` 。及章献崩，尊章惠为太后，所以奉事曲尽 `r n("曲尽，竭尽")` 恩意。景祐中，薨，神主祔于奉慈庙。《涑水记闻》卷八。
 
 
 
@@ -83,7 +83,7 @@
 
 [^奉先寺]: 奉先，祭祀祖先。唐佛寺。俗称九间房。位于今河南洛阳伊水东岸龙门山南部半山，依山凿窟，为龙门石窟群中最大的露天大龛。窟内广深各35米多，崖壁上雕出成组的十一尊大佛。布局宏伟，构思完整。其中卢舍那佛像，高14米，左右金刚立像，高13米。咸亨三年(672)，武后助脂粉钱两万贯开凿，上元二年(675)底竣工。调露元年(679)大像南置寺，名为奉先寺。
 
-3. []{#李宸妃-宋人轶事-2} 章懿李太后生昭陵 `r n("陵墓名。宋仁宗葬永昭陵，宋人以昭陵作为仁宗的代称")` ，而终章献之世，不知章懿为母也。章懿卒，先殡奉先寺。昭陵以章献之崩，号泣过度。[章惠太后劝帝曰]{#杨淑妃语仁宗}：‘此非帝母，帝自有母宸妃李氏，已卒，在奉先寺[^奉先寺]殡之。’仁宗即以犊车 `r n("牛车")` 亟走奉先寺。撤殡观之，在一大井，上四铁索维之。既启棺，而形容如生，略不坏也。时已遣兵围章献之第矣，既启棺，知非鸩死，乃罢遣之。《默记》卷上。
+3. []{#李宸妃-宋人轶事-2} 章懿李太后生昭陵 `r n("陵墓名。宋仁宗葬永昭陵，宋人以昭陵作为仁宗的代称")` ，而终章献之世，不知章懿为母也。章懿卒，先殡奉先寺。昭陵以章献之崩，号泣过度。[章惠太后劝帝曰]{#杨淑妃语仁宗}：‘此非帝母，帝自有母宸妃李氏，已卒，在奉先寺[^奉先寺]殡之。’仁宗即以犊车 `r n("牛车")` 亟走奉先寺。撤殡观之，在一大井，上四铁索维之。既启棺，而形容如生，略不坏也。时已遣兵围章献之第矣，既启棺，知非鸩死，乃罢遣之。 `r co("刘氏一族得存，乃吕夷简功劳。见[其劝刘后](#吕夷简-宋人轶事-15)及[三劝之事](#吕夷简-宋人轶事-14)")` 《默记》卷上。
 
 [^承旨]: 官名。唐代翰林院有翰林学士承旨，位在诸学士上。凡大诰令﹑大废置﹑重要政事，皆得专对。宋元仍其制。元赵孟俯曾为此官，世称赵承旨。明废。参阅唐元稹《翰林承旨学士记》。又五代枢密院有枢密院承旨﹑副承旨;宋代枢密院有都承旨﹑副承旨。初用武臣，后参用文臣。参阅《文献通考．职官十二》。
 
@@ -94,17 +94,24 @@
 
 ## 郭后（宋仁宗）
 
-宋仁宗宫内。
 
 ### 《宋人轶事汇编·卷二》
 
-1. []{#-宋人轶事-1} 康定二年，富文忠为知制诰。先是昭陵聘后，蜀中有王氏女，姿色冠世，入京备选。章献一见，以为妖艳太甚，恐不利于少主，乃以嫁其侄从德，而择郭后位中宫。上终不乐之。王氏之父蒙正，由刘氏婣党屡典名藩。未几，从德卒。至是，中批王氏封遂国夫人，许入禁中。文忠适当草制，封还，抗章甚力，遂并寝其旨。外制缴词头，盖自此始。《挥麈后录》卷二。
+[^知制诰]: 知制诰，古代官名。唐翰林学士加知制诰者起草诏令，余仅备顾问。宋除翰林学士，他官加知制诰者亦起草诏令，称为外制，翰林学士虽皆起草诏令而亦带知制诰衔，称为内制。
 
-2. []{#-宋人轶事-2} 先朝命郭后观奉宸库，后辞曰：‘奉宸国之宝库，非妇人所当入。陛下欲惠赐六宫，愿量颁之，妾不敢奉诏。’上为之止。《涑水记闻》卷六。
+[^刘从德]: 刘从德齿少无才能，特以外家故，恩宠无比。其在卫州，县吏李熙辅者善事刘从德，乃荐其才于朝。太后喜曰：“儿能荐士，知所以为政矣。”即擢熙辅京官。从事郑骧因缘刘从德，亦擢美官。刘从德之妻，嘉州王蒙正女也（遂国夫人）。蒙正家豪右，以厚赂结纳至郎官，为郡守。既而，刘从德病，召还，道卒，时年二十四，赠保宁军节度使，封荣国公，谥康怀。
 
-3. []{#-宋人轶事-3} 庄献初崩，上与吕夷简谋，以夏竦等皆庄献太后之党，悉罢之。退告郭后，郭后曰：‘夷简独不附太后邪？但多机巧，善应变耳。’由是并夷简罢之。是日，夷简押班，闻唱其名，大骇，不知其故。夷简素与内侍副都知阎文应等相结，使为中诇，久之，乃知事由郭后。夷简由是恶郭后。《涑水记闻》卷五。《宋名臣言行录》前集卷九。
+[^外制]: 唐、宋以中书舍人或知制诰所掌者为外制，与翰林学士所掌之内制相对。外制指中书门下正规机构所撰拟的诏敕，内制指皇帝直接由宫廷发出的诰谕。两种官员总称“两制官”。辽、金虽尚存其名，但已非旧制。明清不用此称。
 
-4. []{#-宋人轶事-4} 〔郭〕后之获罪也，上直以一时之忿，且为吕夷简、阎文应所谮，故废之。既而悔之。后出居瑶华宫，章惠太后亦逐杨、尚二美人，而立曹后。久之，上游后园，见郭后故肩舆，凄然伤之，作《庆金枝》词，遣小黄门赐之，且曰：‘当复召汝。’夷简、文应闻之，大惧。会后有小疾，文应使医官故以药发其疾。疾甚，未绝，文应以不救闻，遽以棺敛之。王伯庸时为谏官，上言：‘郭后未卒，数日先具棺器，请推按其起居状。’上不从，但以后礼葬于佛舍而已。《涑水记闻》卷五。《宋名臣言行录》前集卷九。
+1. []{#-宋人轶事-1} 康定二年，富文忠 `r n("富弼")` 为知制诰[^知制诰]。先是昭陵聘后，蜀中有王氏女，姿色冠世，入京备选。章献一见，以为妖艳太甚，恐不利于少主，乃以嫁其侄从德[^刘从德]，而择郭后位中宫。上终不乐之。王氏之父 *蒙正* ，由刘氏婣 `r n("yīn，同“姻”")` 党屡典名藩 `r n("名藩。指地方重镇")` 。未几，从德卒。至是，中批 `r n("皇帝的诏令")` 王氏封遂国夫人，许入禁中。文忠适当草制 `r n("草拟制书")` ，封还，抗章 `r n("上书直言")` 甚力，遂并寝 `r n("搁置 [put]")` 其旨。外制[^外制]缴 `r n("jiǎo。交纳 [hand over;pay](指履行义务或被迫)")` 词头，盖自此始。《挥麈后录》卷二。
+
+[^奉宸库]: 宋库名。宋康定元年（1040），合宣圣殿库、穆清殿库、崇圣殿库、受纳真珍库与乐器库为奉宸库，属太府寺。掌收存金玉。珠宝及其它珍贵物品，以供宫廷享用。
+
+2. []{#-宋人轶事-2} 先朝 `r n("先帝")` 命郭后观奉宸库[^奉宸库]，后辞曰：‘奉宸国之宝库，非妇人所当入。陛下欲惠赐六宫，愿量颁之，妾不敢奉诏。’上为之止。《涑水记闻》卷六。
+
+3. []{#郭后-宋人轶事-3} 庄献初崩，上与吕夷简谋，以 *夏竦* 等皆庄献太后之党，悉罢之。退告郭后，郭后曰：‘夷简独 `r n("难道，岂")` 不附太后邪？但多机巧，善应变耳。’由是并夷简罢之。是日，夷简押班 `r n("百官朝会时领班，管理百官朝会位次。唐制，以监察御史二人任其事。宋制，由参知政事﹑宰相分日押班。")` ，闻唱其名，大骇，不知其故。夷简素与内侍副都知 *阎文应* 等相结，使为中诇 `r n("xiòng。密告；侦察；探听")` ，久之，乃知事由郭后。夷简由是恶郭后。 `r co("将[郭后于尚美人并论](#吕夷简-宋人轶事-24)，盖由此耶")` 《涑水记闻》卷五。《宋名臣言行录》前集卷九。
+
+4. []{#-宋人轶事-4} 〔郭〕后之获罪也，上直以一时之忿 `r co("盖为[争殴之事](#宋仁宗-宋人轶事-16)")` ，且为吕夷简、阎文应所谮，故废之。既而悔之。后出居瑶华宫，章惠太后亦逐杨、尚二美人，而立曹后。久之，上游后园，见郭后故肩舆 `r n("代步工具,由人抬着走")` ，凄然伤之，作《庆金枝》词，遣小黄门赐之，且曰：‘当复召汝。’夷简、文应闻之，大惧。会后有小疾，文应使医官故以药发其疾。疾甚，未绝，文应以不救闻，遽以棺敛之。*王伯庸* 时为谏官，上言：‘郭后未卒，数日先具 `r n("准备，备办")` 棺器 `r n("棺材")` ，请推按 `r n("推按。推究审问")` 其起居状。’上不从，但以后礼葬于佛舍而已。 `r co("郭后似得昭雪。见[此](#韩琦-宋人轶事-60)")` 《涑水记闻》卷五。《宋名臣言行录》前集卷九。
 
 ## 曹后（宋仁宗）
 
