More on `张贵妃` and `高后`.

--- a/01-comment.Rmd
+++ b/01-comment.Rmd
@@ -1,6 +1,6 @@
 # 林峰评
 
-## 奇人轶事，惊人言语
+## 奇人奇事奇言
 
 - 曹丕曾经在圣旨里给大臣说，可以作威作福，死人活人。见 [《三国志·蒋济传》](#曹丕诏夏侯尚)。
 - 宋仁宗身世由两人告知
@@ -13,4 +13,5 @@
     > 方 子京挥毫之际，昨夕余酲尚在，左右观者亦骇叹
 
   薄凉至此？
+- 包拯喷仁宗，系真喷🤦‍♂️。见[此](#宋轶二-张贵妃-7)
 - 
