Some random reading.

--- a/01-comment.Rmd
+++ b/01-comment.Rmd
@@ -4,14 +4,16 @@
 
 - 曹丕曾经在圣旨里给大臣说，可以作威作福，死人活人。见 [《三国志·蒋济传》](#曹丕诏夏侯尚)。
 - 宋仁宗身世由两人告知
-    + 杨淑妃。见[《宋汇编》](#杨淑妃语仁宗)。
-    + 或燕王。见[《宋汇编》](#吕夷简-宋人轶事-15)。
+  + 杨淑妃。见[《宋汇编》](#杨淑妃语仁宗)。
+  + 或燕王。见[《宋汇编》](#吕夷简-宋人轶事-15)。
 - 宋仁宗生母好手段。仁宗人称赤脚仙人。见[《宋汇编》](#李宸妃上位)
 - 宋仁宗喜好双飞。见[《宋汇编》](#宋仁宗-宋人轶事-19)
 - 宋子京对知己晏几道极尽贬斥之能事。见[《宋汇编》](#宋轶九-晏殊-27)
 
-    > 方 子京挥毫之际，昨夕余酲尚在，左右观者亦骇叹
+  > 方 子京挥毫之际，昨夕余酲尚在，左右观者亦骇叹
 
   薄凉至此？
-- 包拯喷仁宗，系真喷🤦‍♂️。见[此](#宋轶二-张贵妃-7)
-- 
+- 包拯喷宋仁宗，系真喷🤦‍♂️。见[此](#宋轶二-张贵妃-7)
+- 宋徽宗书法受黄庭坚影响。见[此](#宋轶二-宋徽宗-5)
+- 周邦彦听徽宗床以词废，继而别李师师以词兴。见[此](#宋轶二十七-周邦彦-5)
+  + 而[此处](#宋轶二十七-周邦彦-6)谓其以听床词兴
